# MLS-MPM

./: CMakeLists.txt  README.md  imgui.ini
build-cuda/: .ninja_deps  .ninja_log  ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MpmSmokeSim.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  cmake_install.cmake  compile_commands.json  glad.lib  glad.vcxproj  glad.vcxproj.filters  imgui.lib  imgui.vcxproj  imgui.vcxproj.filters  mpm_smoke.vcxproj  mpm_smoke.vcxproj.filters
build-cuda/Release/: glad.lib  imgui.lib
build-cuda/glad.dir/Release/glad.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-cuda/imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-cuda/mpm_smoke.dir/Release/: mpm_kernels.cu-1033970161.deps  mpm_kernels.cu.cache  mpm_smoke.exe.recipe  smoke_kernels.cu.cache  smoke_kernels.cu506624074.deps
build-cuda/mpm_smoke.dir/Release/mpm_smoke.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mpm_smoke.lastbuildstate
build-cuda/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-cuda/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-cuda/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MpmSmokeSim.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  imgui.ini  imgui.vcxproj  imgui.vcxproj.filters  mpm_smoke.vcxproj  mpm_smoke.vcxproj.filters
build-win/Release/: glad.lib  imgui.lib
build-win/glad.dir/Release/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-win/imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
build-win/mpm_smoke.dir/Release/: mpm_smoke.exe.recipe
build-win/mpm_smoke.dir/Release/mpm_smoke.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build-win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp
src/gpu/: mpm_cuda.h  mpm_kernels.cu  smoke_cuda.h  smoke_kernels.cu
src/render/: Camera.cpp  Camera.h  LiquidRenderer.cpp  LiquidRenderer.h  Shader.cpp  Shader.h  SmokeRenderer.cpp  SmokeRenderer.h
src/sim/: Coupling.cpp  Coupling.h  MpmSim.cpp  MpmSim.h  SDF.cpp  SDF.h  SimulationParams.cpp  SimulationParams.h  SmokeSim.cpp  SmokeSim.h
